// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render UserForm correctly with data 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <label>
        Nome
      </label>
      <input
        className="form-control"
        onChange={[Function]}
        placeholder="Nome"
        type="text"
        value="Rafael Dias"
      />
    </div>
    <div
      className="form-group"
    >
      <label>
        Apelido
      </label>
      <input
        className="form-control"
        onChange={[Function]}
        placeholder="Apelido"
        type="text"
        value="Capotinho"
      />
    </div>
    <div
      className="form-group"
    >
      <label>
        Telefone
      </label>
      <input
        className="form-control"
        onChange={[Function]}
        placeholder="(XX) XXXXX-XXXX"
        type="text"
        value="(61) 98245-1511"
      />
    </div>
    <div
      className="form-group"
    >
      <label>
        Senha
      </label>
      <input
        className="form-control"
        onChange={[Function]}
        type="password"
        value="senhaSecreta"
      />
    </div>
    <button
      className="btn btn-success btn-lg btn-block"
    >
      Cadastrar-se
    </button>
  </form>
</div>
`;

exports[`should render UserForm correctly without data 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <label>
        Nome
      </label>
      <input
        className="form-control"
        onChange={[Function]}
        placeholder="Nome"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label>
        Apelido
      </label>
      <input
        className="form-control"
        onChange={[Function]}
        placeholder="Apelido"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label>
        Telefone
      </label>
      <input
        className="form-control"
        onChange={[Function]}
        placeholder="(XX) XXXXX-XXXX"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label>
        Senha
      </label>
      <input
        className="form-control"
        onChange={[Function]}
        type="password"
        value=""
      />
    </div>
    <button
      className="btn btn-success btn-lg btn-block"
    >
      Cadastrar-se
    </button>
  </form>
</div>
`;
